# wasi-libc

./: .azure-pipelines.yml  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Makefile-eh  Makefile.in  README.md  azure-pipelines.yml  build-all.sh  build.sh  build32-eh.sh  build32-ehpic.sh  build32-pic-rt.sh  build32-pic.sh  build32.sh  build64.sh  clean.sh  configure  configure.ac  linker-provided-symbols.txt  make-bindings.sh  take-expected-32.sh  take-expected-64.sh  take-expected.sh
cmake/: CMakeLists.txt  ba-download.cmake  bindings.cmake  builtins.cmake  check-symbols.cmake  clang-format.cmake  global-compiler-options.cmake  libc-imports.cmake  local-sysroot.cmake  predefined-macros.cmake  wasi-wits.cmake  wasm-component-ld.cmake  wasm-tools.cmake
cmake/dlmalloc/: CMakeLists.txt
cmake/libc-bottom-half/: CMakeLists.txt
cmake/libc-bottom-half/clocks/: CMakeLists.txt
cmake/libc-bottom-half/crt1/: CMakeLists.txt
cmake/libc-bottom-half/getpid/: CMakeLists.txt
cmake/libc-bottom-half/mman/: CMakeLists.txt
cmake/libc-bottom-half/signal/: CMakeLists.txt
cmake/libc-top-half/: CMakeLists.txt
cmake/libc-top-half/musl/: CMakeLists.txt
cmake/scripts/: run-check-symbols.cmake
libc-bottom-half/: CMakeLists.txt  README  README.md
libc-bottom-half/clocks/: CMakeLists.txt  clock.c  getrusage.c  times.c
libc-bottom-half/cloudabi/headers/: cloudabi_types_common.h
libc-bottom-half/crt/: crt1-command.c  crt1-reactor.c  crt1.c  reactor-crt1.c  scrt1.c
libc-bottom-half/crt/wasm32/: wasip3-crt1-command.s  wasip3-crt1-reactor.s
libc-bottom-half/getpid/: CMakeLists.txt  getpid.c
libc-bottom-half/headers/private/: descriptor_table.h  preview2.h  reactor.h  stdio.h  wasi-libc.h
libc-bottom-half/headers/public/: __errno.h  __errno_values.h  __fd_set.h  __functions_malloc.h  __functions_memcpy.h  __header_bits_signal.h  __header_dirent.h  __header_fcntl.h  __header_inttypes.h  __header_netinet_in.h  __header_poll.h  __header_stdlib.h  __header_string.h  __header_sys_ioctl.h  __header_sys_mman.h  __header_sys_resource.h  __header_sys_socket.h  __header_time.h  __header_unistd.h  __macro_PAGESIZE.h  __mode_t.h  __seek.h  __struct_dirent.h  __struct_group_filter.h  __struct_group_req.h  __struct_group_source_req.h  __struct_if_addrs.h  __struct_in6_addr.h  __struct_in6_mtuinfo.h  __struct_in6_pktinfo.h  __struct_in_addr.h  __struct_in_pktinfo.h  __struct_iovec.h  __struct_ip_mreq.h  __struct_ip_mreq_source.h  __struct_ip_mreqn.h  __struct_ip_msfilter.h  __struct_ip_opts.h  __struct_ipv6_mreq.h  __struct_msghdr.h  (+36 more)
libc-bottom-half/libpreopen/: libpreopen.c
libc-bottom-half/libpreopen/include/: libpreopen.h
libc-bottom-half/libpreopen/lib/: internal.h  libpreopen.c  po_err.c  po_libc_wrappers.c  po_map.c
libc-bottom-half/mman/: CMakeLists.txt  mman.c
libc-bottom-half/preview2/: __wasilibc_trap.c
libc-bottom-half/signal/: CMakeLists.txt  signal.c
libc-bottom-half/sources/: __environ.c  __errno_location.c  __libcall_thread_context.S  __libcall_thread_context.s  __main_argc_argv.c  __main_void.c  __original_main.c  __wasilibc_dt.c  __wasilibc_environ.c  __wasilibc_fd_renumber.c  __wasilibc_futex.c  __wasilibc_init_task.s  __wasilibc_initialize_environ.c  __wasilibc_poly_real.c  __wasilibc_random.c  __wasilibc_real.c  __wasilibc_rmdirat.c  __wasilibc_stack.c  __wasilibc_tell.c  __wasilibc_unlinkat.c  __wasixlibc_real.c  __wasm_init_task.S  __wasm_init_task.s  abort.c  accept-wasip1.c  accept-wasip2.c  accept.c  at_fdcwd.c  bind.c  cabi_realloc_augment.h  chdir.c  complex-builtins.c  connect.c  descriptor_table.c  dup.c  environ.c  errno.c  file.c  file_utils.c  getcwd.c  (+45 more)
libc-bottom-half/sources/__wasilibc_real/: args_get.c  args_sizes_get.c  clock_res_get.c  clock_time_get.c  environ_get.c  environ_sizes_get.c  fd_advise.c  fd_allocate.c  fd_close.c  fd_datasync.c  fd_fdstat_get.c  fd_fdstat_set_flags.c  fd_fdstat_set_rights.c  fd_filestat_get.c  fd_filestat_set_size.c  fd_filestat_set_times.c  fd_pread.c  fd_prestat_dir_name.c  fd_prestat_get.c  fd_pwrite.c  fd_read.c  fd_readdir.c  fd_renumber.c  fd_seek.c  fd_sync.c  fd_tell.c  fd_write.c  path_create_directory.c  path_filestat_get.c  path_filestat_set_times.c  path_link.c  path_open.c  path_readlink.c  path_remove_directory.c  path_rename.c  path_symlink.c  path_unlink_file.c  poll_oneoff.c  proc_exit.c  random_get.c  (+5 more)
libc-bottom-half/sources/math/: fmin-fmax.c  math-builtins.c
libc-top-half/: CMakeLists.txt  README.md
libc-top-half/musl/: INSTALL  README  WHATSNEW  configure
libc-top-half/sources/: arc4random.c  isatty.c
libc-top-half/stub-pthreads/: condvar.c  mutex.c  stub-pthreads.c
test/: .gitignore  CMakeLists.txt  Makefile  README.md  libc-test.patch  socket-test.cmake  stdio-test.cmake
test/scripts/: add-flags.py  cpython3.14.patch  failed-tests.sh  filter.py  generate-stubs.sh  run-test.sh
test/smoke/: smoke.mk  test_fts.c
test/src/: access.c  append.c  argv_two_args.c  busywait.c  chdir.c  clear_fds.c  clock_nanosleep.c  close-stdio.c  close.c  coop_barrier_reuse.c  coop_cond_clock_monotonic.c  coop_cond_signal_wakeup.c  coop_cond_timedwait_return.c  coop_futex_wake_multiple.c  coop_io_accept_queued_behind_poll.c  coop_io_accept_while_blocked.c  coop_io_close_flushes_write.c  coop_io_parallel_rw.c  coop_io_poll_cross_thread.c  coop_io_poll_dup_connecting_fd.c  coop_io_poll_dup_fd.c  coop_io_poll_spurious_ready.c  coop_io_poll_while_blocked.c  coop_io_read_queued_behind_poll.c  coop_io_shutdown_after_ewouldblock.c  coop_io_shutdown_read_race.c  coop_io_shutdown_under_poll.c  coop_io_shutdown_while_blocked.c  coop_io_stress.c  coop_io_tcp_bounce_shutdown.c  coop_io_two_blocking_reads.c  coop_io_udp_bounce_reconnect.c  coop_io_udp_connect_while_blocked.c  coop_io_udp_recv_queued_behind_poll.c  coop_io_write_after_ewouldblock.c  coop_join_uaf.c  coop_key_delete_after_exit.c  coop_pipe_close_wakes.c  coop_pipe_close_wakes_poll.c  coop_pipe_poll_read.c  (+137 more)
test/wasix/: run_tests.sh
tools/wasi-headers/: .gitignore  Cargo.toml
tools/wasix-headers/: Cargo.toml
(+1184 files in other folders)
